homework5/NOTE
Pulling https://github.com/Daninext/IS-2020-prog-2-sem/homework5
Pull finished
In file included from main.cpp:10:
CircularBuffer.hpp:5:11: error: declaration of template parameter 'T' shadows template parameter
    5 |  template<typename T>
      |           ^~~~~~~~
CircularBuffer.hpp:3:11: note: template parameter 'T' declared here
    3 | template <class T>
      |           ^~~~~
CircularBuffer.hpp: In instantiation of 'void CircularBuffer<T>::changeCapacity(size_t) [with T = int; size_t = unsigned int]':
main.cpp:187:23:   required from here
CircularBuffer.hpp:186:21: warning: comparison of integer expressions of different signedness: 'int' and 'size_t' {aka 'unsigned int'} [-Wsign-compare]
  186 |   for (int i = 0; i != size; i++) {
      |                   ~~^~~~~~~
CircularBuffer.hpp: In member function 'T CircularBuffer<T>::operator[](size_t) const [with T = int]':
CircularBuffer.hpp:180:2: warning: control reaches end of non-void function [-Wreturn-type]
  180 |  }
      |  ^
CircularBuffer.hpp: In member function 'T CircularBuffer<T>::delFirst() [with T = int]':
CircularBuffer.hpp:146:2: warning: control reaches end of non-void function [-Wreturn-type]
  146 |  }
      |  ^
CircularBuffer.hpp: In member function 'T CircularBuffer<T>::delLast() [with T = int]':
CircularBuffer.hpp:137:2: warning: control reaches end of non-void function [-Wreturn-type]
  137 |  }
      |  ^
CircularBuffer.hpp: In member function 'T& CircularBuffer<T>::operator[](size_t) [with T = int]':
CircularBuffer.hpp:167:2: warning: control reaches end of non-void function [-Wreturn-type]
  167 |  }
      |  ^
CircularBuffer.hpp: In member function 'T CircularBuffer<T>::delLast() [with T = std::__cxx11::basic_string<char>]':
CircularBuffer.hpp:137:2: warning: control reaches end of non-void function [-Wreturn-type]
  137 |  }
      |  ^
CircularBuffer.hpp: In member function 'T& CircularBuffer<T>::operator[](size_t) [with T = std::__cxx11::basic_string<char>]':
CircularBuffer.hpp:167:2: warning: control reaches end of non-void function [-Wreturn-type]
  167 |  }
      |  ^
make: *** [makefile:2: all] Error 1



